examples/argorollout/examples/smi/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  annotations:
    linkerd.io/inject: enabled
